--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,7 @@
 	<body>
         {% include header.html %}
 		{{ content }}
+		{% include subscribeForm.html %}
         {% include footer.html %}
 	</body>
 </html>
