--- a/_includes/subscribeForm.html
+++ b/_includes/subscribeForm.html
@@ -1,6 +1,6 @@
 <div class="subscribeForm">
 	<div class="subscribeForm-inner">
-		<form action="//adamsilver.us9.list-manage.com/subscribe/post?u=b8fb04f39bf86109693e00ba5&amp;id=cf3191eba5" method="post">
+		<form action="//maintainablecss.us9.list-manage.com/subscribe/post?u=b8fb04f39bf86109693e00ba5&amp;id=cf3191eba5" method="post">
 
 			<input type="hidden" name="b_b8fb04f39bf86109693e00ba5_cf3191eba5" value="">
 
