--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -716,7 +716,7 @@ a.chapterNavigation-next:active {
 	margin-right: auto;
 	margin-left: auto;
 	max-width: 700px;
-	padding: 20px;
+	padding: 40px 20px;
 }
 
 .subscribeForm-heading {
