--- a/_includes/subscribeForm.html
+++ b/_includes/subscribeForm.html
@@ -1,4 +1,4 @@
-<div class="subscribeForm">
+<!--<div class="subscribeForm">
 	<div class="subscribeForm-inner">
 		<form action="//maintainablecss.us9.list-manage.com/subscribe/post?u=b8fb04f39bf86109693e00ba5&amp;id=cf3191eba5" method="post">
 
@@ -12,4 +12,4 @@
 
 		</form>
 	</div>
-</div>
+</div>-->
