--- a/_includes/subscribeForm.html
+++ b/_includes/subscribeForm.html
@@ -5,7 +5,7 @@
 			<input type="hidden" name="b_b8fb04f39bf86109693e00ba5_cf3191eba5" value="">
 
 			<h2 class="subscribeForm-heading">Want to learn even more?</h2>
-			<p>Enter your <label for="mce-EMAIL">email</label> and I will keep you up-to-date.</p>
+			<p>Enter your <label for="mce-EMAIL">email</label> and I will send you new chapters as I release them.</p>
 
 			<input placeholder="Your email address..." type="email" name="EMAIL" id="mce-EMAIL" class="subscribeForm-email" required>
 			<input class="subscribeForm-button" type="submit" value="Yes, I want updates!" name="subscribe">
