Label update to explain about my newletter

--- a/_includes/subscribeForm.html
+++ b/_includes/subscribeForm.html
@@ -1,11 +1,13 @@
 <div class="subscribeForm">
 	<div class="subscribeForm-inner">
-		<form action="//maintainablecss.us9.list-manage.com/subscribe/post?u=b8fb04f39bf86109693e00ba5&amp;id=cf3191eba5" method="post">
+		<form action="//adamsilver.us9.list-manage.com/subscribe/post?u=b8fb04f39bf86109693e00ba5&amp;id=441c045a36" method="post">
 
-			<input type="hidden" name="b_b8fb04f39bf86109693e00ba5_cf3191eba5" value="">
+			<input type="hidden" name="b_b8fb04f39bf86109693e00ba5_441c045a36" value="">
+			<input type="hidden" name="SITE" value="{{site.url}}">
+			<input type="hidden" name="LOCATION" value="{{page.url}}">
 
-			<h2 class="subscribeForm-heading">Want to learn even more?</h2>
-			<p><label for="mce-EMAIL">Enter your email and I will send you new chapters as I release them.</label></p>
+			<h2 class="subscribeForm-heading">Want updates?</h2>
+			<p><label for="mce-EMAIL">Enter your email to join my newsletter and you'll get the latest updates to MaintainableCSS as well as my usual articles.</label></p>
 
 			<input placeholder="Your email address..." type="email" name="EMAIL" id="mce-EMAIL" class="subscribeForm-email" required>
 			<input class="subscribeForm-button" type="submit" value="Yes, I want updates!" name="subscribe">
