--- a/_includes/favicon.html
+++ b/_includes/favicon.html
@@ -12,7 +12,7 @@
 <link rel="icon" type="image/png" href="{{ site.url }}/favicon-96x96.png" sizes="96x96">
 <link rel="icon" type="image/png" href="{{ site.url }}/favicon-16x16.png" sizes="16x16">
 <link rel="manifest" href="{{ site.url }}/manifest.json">
-<link rel="mask-icon" href="{{ site.url }}/safari-pinned-tab.svg" color="#001f3f">
-<meta name="msapplication-TileColor" content="#001F3F">
+<link rel="mask-icon" href="{{ site.url }}/safari-pinned-tab.svg" color="#FF851B">
+<meta name="msapplication-TileColor" content="#FF851B">
 <meta name="msapplication-TileImage" content="{{ site.url }}/mstile-144x144.png">
 <meta name="theme-color" content="#ffffff">
