--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,7 +13,7 @@
 
 <meta property="og:url" content="{{ site.url }}{{ page.url | replace:'index.html',''}}">
 <meta property="og:site_name" content="MaintainableCSS">
-<meta property="og:image" content="{{ site.url }}/assets/img/card1.png">
+<meta property="og:image" content="{{ site.url }}/assets/img/card2.png">
 <meta property="og:image:width" content="118">
 <meta property="og:image:height" content="118">
 
@@ -36,6 +36,8 @@
 {% endif %}
 
 <meta property="twitter:image" content="{{ site.url }}/assets/img/card1.png">
+
+<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700,700i|PT+Serif:400,400i,700,700i" rel="stylesheet">
 
 <link rel="stylesheet" href="/assets/css/main.css" type="text/css" media="all">
 
