Layout and copy fixes

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
-<div class="footer">
+<footer class="footer">
 	<div class="footer-inner">
 		<p>Created by <a href="http://adamsilver.io">Adam Silver</a>, a UX engineer from London. Making things simple and human.</p>
 	</div>
-</div>
+</footer>
