--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,9 @@
 	</head>
 	<body>
         {% include header.html %}
-		{{ content }}
+        <main>
+			{{ content }}
+		</main>
 		{% include subscribeForm.html %}
         {% include footer.html %}
 	</body>
