Maintainable css styles and content upgrade

--- a/_includes/subscribeForm.html
+++ b/_includes/subscribeForm.html
@@ -10,7 +10,7 @@
 			<p><label for="mce-EMAIL">Enter your email to join my newsletter and you'll get the latest updates to MaintainableCSS as well as my usual articles.</label></p>
 
 			<input placeholder="Your email address..." type="email" name="EMAIL" id="mce-EMAIL" class="subscribeForm-email" required>
-			<input class="subscribeForm-button" type="submit" value="Yes, I want updates!" name="subscribe">
+			<input class="subscribeForm-button" type="submit" value="Sign me up" name="subscribe">
 
 		</form>
 	</div>
