--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -74,8 +74,7 @@ a:focus {
 **********************************************************/
 
 .logo {
-	font-size: 2.5em;
-	font-weight: bold;
+	font-size: 2em;
 	text-align: center;
 }
 
@@ -87,7 +86,7 @@ a:focus {
 }
 
 .logo a {
-	color: #FF851B;
+	color: #fff;
 	text-decoration: none;
 }
 
@@ -112,7 +111,7 @@ a:focus {
 	margin-left: 3px;
 	margin-right: 3px;
 	text-decoration: none;
-	color: #FF851B;
+	color: #fff;
 }
 
 @media(min-width: 360px) {
@@ -128,7 +127,7 @@ a:focus {
 }
 
 a.navigation-isActive {
-	font-weight: bold;
+	border-bottom: 1px solid #FF851B;
 }
 
 /**********************************************************
