--- a/_includes/subscribeForm.html
+++ b/_includes/subscribeForm.html
@@ -7,9 +7,11 @@
 			<input type="hidden" name="LOCATION" value="{{page.url}}">
 
 			<h2 class="subscribeForm-heading">Want updates?</h2>
-			<p><label for="mce-EMAIL">Enter your email to join my newsletter and you'll get the latest updates to MaintainableCSS as well as my usual articles.</label></p>
+			<p>Join my newsletter to get the latest MaintainableCSS updates and my usual articles about UX and front-end development.</p>
 
-			<input placeholder="Your email address..." type="email" name="EMAIL" id="mce-EMAIL" class="subscribeForm-email" required>
+			<label for="mce-EMAIL" class="subscribeForm-label">Your email address</label>
+
+			<input type="email" name="EMAIL" id="mce-EMAIL" class="subscribeForm-email" required>
 			<input class="subscribeForm-button" type="submit" value="Sign me up" name="subscribe">
 
 		</form>
